added upstart jarbs for harvester processes and tomcat